--- a/pages/book.html
+++ b/pages/book.html
@@ -57,14 +57,14 @@ decentralized book<br>
 
 
 <div class="p1">
-<a href="https://app.ens.domains/name/cryptopoetic.eth/details" class="content-l2" target="_blank">cryptopoetic</a><br>
-<a href="https://app.ens.domains/name/cryptoproject.eth/details" class="content-l2" target="_blank">cryptoproject</a><br>
-<a href="https://app.ens.domains/name/cryptoaesthetic.eth/details" class="content-l2" target="_blank">cryptoaesthetic</a><br>
-<a href="https://app.ens.domains/name/cryptoeffect.eth/details" class="content-l2" target="_blank">cryptoeffect</a><br>
-<a href="https://app.ens.domains/name/cryptoedition.eth/details" class="content-l2" target="_blank">cryptoedition</a><br>
-<a href="https://app.ens.domains/name/cryptorelease.eth/details" class="content-l2" target="_blank">cryptorelease</a><br>
-<a href="https://app.ens.domains/name/cryptoemission.eth/details" class="content-l2" target="_blank">cryptoemission</a><br>
-<a href="https://app.ens.domains/name/cryptodefees.eth/details" class="content-l2" target="_blank">cryptodefees</a><br>
+rhyme to rhyme process <a href="https://app.ens.domains/name/cryptopoetic.eth" class="content-l2" target="_blank">cryptopoetic</a> dot eth<br>
+to the moon express <a href="https://app.ens.domains/name/cryptoproject.eth" class="content-l2" target="_blank">cryptoproject</a> dot eth<br>
+art of mint lossless <a href="https://app.ens.domains/name/cryptoaesthetic.eth" class="content-l2" target="_blank">cryptoaesthetic</a> dot eth<br>
+hype and rich access <a href="https://app.ens.domains/name/cryptoeffect.eth" class="content-l2" target="_blank">cryptoeffect</a> dot eth<br>
+digital print repress <a href="https://app.ens.domains/name/cryptoedition.eth" class="content-l2" target="_blank">cryptoedition</a> dot eth<br>
+noise'n'glitch excess <a href="https://app.ens.domains/name/cryptorelease.eth" class="content-l2" target="_blank">cryptorelease</a> dot eth<br>
+emansipay oh yes <a href="https://app.ens.domains/name/cryptoemission.eth" class="content-l2" target="_blank">cryptoemission</a> dot eth<br>
+cbdc is death <a href="https://app.ens.domains/name/cryptodefees.eth" class="content-l2" target="_blank">cryptodefees</a> dot eth<br>
 </div>
 
 0xb1ddaea351354f6e45a8ada12406d455806d7112ee4aded4be5d3ad4965b961e<br>
@@ -85,10 +85,10 @@ decentralized book<br>
 
 
 <div class="p2">
-<a href="https://app.ens.domains/name/cryptoconnection.eth/details" class="content-l2" target="_blank">cryptoconnection</a><br>
-<a href="https://app.ens.domains/name/cryptodevice.eth/details" class="content-l2" target="_blank">cryptodevice</a><br>
-<a href="https://app.ens.domains/name/cryptocollection.eth/details" class="content-l2" target="_blank">cryptocollection</a><br>
-<a href="https://app.ens.domains/name/cryptousweis.eth/details" class="content-l2" target="_blank">cryptousweis</a><br>
+<a href="https://app.ens.domains/name/cryptoconnection.eth" class="content-l2" target="_blank">cryptoconnection</a><br>
+<a href="https://app.ens.domains/name/cryptodevice.eth" class="content-l2" target="_blank">cryptodevice</a><br>
+<a href="https://app.ens.domains/name/cryptocollection.eth" class="content-l2" target="_blank">cryptocollection</a><br>
+<a href="https://app.ens.domains/name/cryptousweis.eth" class="content-l2" target="_blank">cryptousweis</a><br>
 </div>
 
 0x49e0f5a17dda3e2f9d39bdf0c2d5f852bc4cb484f48aba816a47c5435946bdb4<br>
@@ -106,10 +106,10 @@ decentralized book<br>
 
 
 <div class="p3">
-<a href="https://app.ens.domains/name/cryptohipster.eth/details" class="content-l2" target="_blank">cryptohipster</a><br>
-<a href="https://app.ens.domains/name/cryptohead.eth/details" class="content-l2" target="_blank">cryptohead</a><br>
-<a href="https://app.ens.domains/name/cryptoroad.eth/details" class="content-l2" target="_blank">cryptoroad</a><br>
-<a href="https://app.ens.domains/name/cryptodead.eth/details" class="content-l2" target="_blank">cryptodead</a><br>
+<a href="https://app.ens.domains/name/cryptohipster.eth" class="content-l2" target="_blank">cryptohipster</a><br>
+<a href="https://app.ens.domains/name/cryptohead.eth" class="content-l2" target="_blank">cryptohead</a><br>
+<a href="https://app.ens.domains/name/cryptoroad.eth" class="content-l2" target="_blank">cryptoroad</a><br>
+<a href="https://app.ens.domains/name/cryptodead.eth" class="content-l2" target="_blank">cryptodead</a><br>
 </div>
 
 0x2f28a9965f8ee62814dd690c2aafb6f476949b7f97f5ebdbda11aa63d0575c36<br>
@@ -127,10 +127,10 @@ decentralized book<br>
 
 
 <div class="p4">
-<a href="https://app.ens.domains/name/cryptoacid.eth/details" class="content-l2" target="_blank">cryptoacid</a><br>
-<a href="https://app.ens.domains/name/cryptotrip.eth/details" class="content-l2" target="_blank">cryptotrip</a><br>
-<a href="https://app.ens.domains/name/cryptochannel.eth/details" class="content-l2" target="_blank">cryptochannel</a><br>
-<a href="https://app.ens.domains/name/cryptosleep.eth/details" class="content-l2" target="_blank">cryptosleep</a><br>
+<a href="https://app.ens.domains/name/cryptoacid.eth" class="content-l2" target="_blank">cryptoacid</a><br>
+<a href="https://app.ens.domains/name/cryptotrip.eth" class="content-l2" target="_blank">cryptotrip</a><br>
+<a href="https://app.ens.domains/name/cryptochannel.eth" class="content-l2" target="_blank">cryptochannel</a><br>
+<a href="https://app.ens.domains/name/cryptosleep.eth" class="content-l2" target="_blank">cryptosleep</a><br>
 </div>
 
 0xf863a3d12399190ebbc4c1eebe15857f05de25416db0dd72fa6b43f5c560543a<br>
@@ -148,18 +148,18 @@ decentralized book<br>
 
 
 <div class="p5">
-<a href="https://app.ens.domains/name/newdomain.eth/details" class="content-l2" target="_blank">newdomain</a><br>
-<a href="https://app.ens.domains/name/newhash.eth/details" class="content-l2" target="_blank">newhash</a><br>
-<a href="https://app.ens.domains/name/newdomains.eth/details" class="content-l2" target="_blank">newdomains</a><br>
-<a href="https://app.ens.domains/name/newcash.eth/details" class="content-l2" target="_blank">newcash</a><br>
-<a href="https://app.ens.domains/name/newmedia.eth/details" class="content-l2" target="_blank">newmedia</a><br>
-<a href="https://app.ens.domains/name/newlanguage.eth/details" class="content-l2" target="_blank">newlanguage</a><br>
-<a href="https://app.ens.domains/name/newmedium.eth/details" class="content-l2" target="_blank">newmedium</a><br>
-<a href="https://app.ens.domains/name/newsandwich.eth/details" class="content-l2" target="_blank">newsandwich</a><br>
-<a href="https://app.ens.domains/name/newme.eth/details" class="content-l2" target="_blank">newme</a><br>
-<a href="https://app.ens.domains/name/newserious.eth/details" class="content-l2" target="_blank">newserious</a><br>
-<a href="https://app.ens.domains/name/newfee.eth/details" class="content-l2" target="_blank">newfee</a><br>
-<a href="https://app.ens.domains/name/newexperience.eth/details" class="content-l2" target="_blank">newexperience</a><br>
+<a href="https://app.ens.domains/name/newdomain.eth" class="content-l2" target="_blank">newdomain</a><br>
+<a href="https://app.ens.domains/name/newhash.eth" class="content-l2" target="_blank">newhash</a><br>
+<a href="https://app.ens.domains/name/newdomains.eth" class="content-l2" target="_blank">newdomains</a><br>
+<a href="https://app.ens.domains/name/newcash.eth" class="content-l2" target="_blank">newcash</a><br>
+<a href="https://app.ens.domains/name/newmedia.eth" class="content-l2" target="_blank">newmedia</a><br>
+<a href="https://app.ens.domains/name/newlanguage.eth" class="content-l2" target="_blank">newlanguage</a><br>
+<a href="https://app.ens.domains/name/newmedium.eth" class="content-l2" target="_blank">newmedium</a><br>
+<a href="https://app.ens.domains/name/newsandwich.eth" class="content-l2" target="_blank">newsandwich</a><br>
+<a href="https://app.ens.domains/name/newme.eth" class="content-l2" target="_blank">newme</a><br>
+<a href="https://app.ens.domains/name/newserious.eth" class="content-l2" target="_blank">newserious</a><br>
+<a href="https://app.ens.domains/name/newfee.eth" class="content-l2" target="_blank">newfee</a><br>
+<a href="https://app.ens.domains/name/newexperience.eth" class="content-l2" target="_blank">newexperience</a><br>
 </div>
 
 0xaed1d5a221b62dfde3da9eb248d51563d93b32830652892866f0e690c99130c4<br>
@@ -404,8 +404,8 @@ CrystalDay<br>
 </div>
 
 
-Msg1ID: 4ddb1c47982ff8158031971bc43b9326f6b8db2f52d9de1e602cc3d5ef64dbad<br>
-Msg2ID: 56be80e4eaa068ec524d11b0fce9f79f3e680146bbde40985554ee0c2a13c52c<br>
+Msg1ID: <a href="https://ever.live/messages/messageDetails?id=4ddb1c47982ff8158031971bc43b9326f6b8db2f52d9de1e602cc3d5ef64dbad" class="content-l2" target="_blank">4ddb1c47982ff8158031971bc43b9326f6b8db2f52d9de1e602cc3d5ef64dbad</a><br>
+Msg2ID: <a href="https://ever.live/messages/messageDetails?id=56be80e4eaa068ec524d11b0fce9f79f3e680146bbde40985554ee0c2a13c52c" class="content-l2" target="_blank">56be80e4eaa068ec524d11b0fce9f79f3e680146bbde40985554ee0c2a13c52c</a><br>
 
 </pre></div>
 
@@ -427,10 +427,9 @@ EverWin<br>
 </div>
 
 
-MsgID: efde469834621f1b1fa641b945f3d89c2c52d352a59cf0e8e7991367c6280ae6
+MsgID: <a href="https://ever.live/messages/messageDetails?id=efde469834621f1b1fa641b945f3d89c2c52d352a59cf0e8e7991367c6280ae6" class="content-l2" target="_blank">efde469834621f1b1fa641b945f3d89c2c52d352a59cf0e8e7991367c6280ae6</a><br>
 
 </pre></div>
-
 
 <div class="container-chain"><a href="https://hub.mintscan.io" class="content" target="_blank">{Chain:Cosmos}</a></div>
 
@@ -477,8 +476,27 @@ Msg0TxH: <a href="https://www.mintscan.io/cosmos/txs/E197CAF28A4507ABA679CAC33C7
 Msg1TxH: <a href="https://www.mintscan.io/cosmos/txs/6A6B9B857E4A8A944BEC97785B520482F9B6F18B289A924973F973155FD36222" class="content-l2" target="_blank">6A6B9B857E4A8A944BEC97785B520482F9B6F18B289A924973F973155FD36222</a><br>
 Msg2TxH: <a href="https://www.mintscan.io/cosmos/txs/2823070E22AA57880D3BBFEF50F1CC751615536D1CCCE913F1175465D49421D6" class="content-l2" target="_blank">2823070E22AA57880D3BBFEF50F1CC751615536D1CCCE913F1175465D49421D6</a><br>
 Msg3TxH: <a href="https://www.mintscan.io/cosmos/txs/768EB354BF70F92319EEA8DBDA4E02FA621EA08F21EBE8B309644311178F8851" class="content-l2" target="_blank">768EB354BF70F92319EEA8DBDA4E02FA621EA08F21EBE8B309644311178F8851</a><br>
+
 </pre></div>
 
+<div class="container-poem17">
+<pre>
+*<br>
+<h3>Star Wars</h3>
+
+<div class="p17">
+- Knock knock, Cosmos, open the doors!<br>
+- Who's there?<br>
+- Star Wars, of course.<br>
+<br>
+</div>
+
+From: cosmos12cct4dlepw3fmxvc0k2myqwvj4mxj8xuc0drmf<br>
+To:   cosmos1uxmjzh94huf2qd4xgpjxgg20dryal00qcu9j94<br>
+<br>
+MsgTxH: <a href="https://www.mintscan.io/cosmos/txs/D6E030FF83488973EB3376604E1F0D5203E812BB208D0242580467CA0A5EE7B8?height=15236721" class="content-l2" target="_blank">D6E030FF83488973EB3376604E1F0D5203E812BB208D0242580467CA0A5EE7B8</a><br>
+
+</pre></div>
 
 </main>
 
