--- a/pages/about.html
+++ b/pages/about.html
@@ -147,7 +147,7 @@ Also, to better understand these poems, it is better to be aware of the topics o
 
 <footer>
 
-<div class="container-foot">HTML+CSS+IPFS ~ Deployed by Cyberborea</div>
+<div class="container-foot">HTML+CSS+IPFS ~ Deployed by <a href="https://cyberborea.eth.limo" class="content-footer" target="_blank">Cyberborea</a></div>
 
 </footer>
 
