--- a/pages/book.html
+++ b/pages/book.html
@@ -57,14 +57,14 @@ decentralized book<br>
 
 
 <div class="p1">
-rhyme to rhyme process <a href="https://app.ens.domains/name/cryptopoetic.eth" class="content-l2" target="_blank">cryptopoetic</a> dot eth<br>
-to the moon express <a href="https://app.ens.domains/name/cryptoproject.eth" class="content-l2" target="_blank">cryptoproject</a> dot eth<br>
-art of mint lossless <a href="https://app.ens.domains/name/cryptoaesthetic.eth" class="content-l2" target="_blank">cryptoaesthetic</a> dot eth<br>
-hype and rich access <a href="https://app.ens.domains/name/cryptoeffect.eth" class="content-l2" target="_blank">cryptoeffect</a> dot eth<br>
-digital print repress <a href="https://app.ens.domains/name/cryptoedition.eth" class="content-l2" target="_blank">cryptoedition</a> dot eth<br>
-noise'n'glitch excess <a href="https://app.ens.domains/name/cryptorelease.eth" class="content-l2" target="_blank">cryptorelease</a> dot eth<br>
-emansipay oh yes <a href="https://app.ens.domains/name/cryptoemission.eth" class="content-l2" target="_blank">cryptoemission</a> dot eth<br>
-cbdc is death <a href="https://app.ens.domains/name/cryptodefees.eth" class="content-l2" target="_blank">cryptodefees</a> dot eth<br>
+rhyme to rhyme process <a href="https://app.ens.domains/name/cryptopoetic.eth" class="content-l2" target="_blank">cryptopoetic</a>    dot eth<br>
+to the moon express    <a href="https://app.ens.domains/name/cryptoproject.eth" class="content-l2" target="_blank">cryptoproject</a>   dot eth<br>
+art of mint lossless   <a href="https://app.ens.domains/name/cryptoaesthetic.eth" class="content-l2" target="_blank">cryptoaesthetic</a> dot eth<br>
+hype and rich access   <a href="https://app.ens.domains/name/cryptoeffect.eth" class="content-l2" target="_blank">cryptoeffect</a>    dot eth<br>
+digital print repress  <a href="https://app.ens.domains/name/cryptoedition.eth" class="content-l2" target="_blank">cryptoedition</a>   dot eth<br>
+noise'n'glitch excess  <a href="https://app.ens.domains/name/cryptorelease.eth" class="content-l2" target="_blank">cryptorelease</a>   dot eth<br>
+emansipay oh yes       <a href="https://app.ens.domains/name/cryptoemission.eth" class="content-l2" target="_blank">cryptoemission</a>  dot eth<br>
+cbdc is death          <a href="https://app.ens.domains/name/cryptodefees.eth" class="content-l2" target="_blank">cryptodefees</a>    dot eth<br>
 </div>
 
 0xb1ddaea351354f6e45a8ada12406d455806d7112ee4aded4be5d3ad4965b961e<br>
@@ -495,6 +495,50 @@ From: cosmos12cct4dlepw3fmxvc0k2myqwvj4mxj8xuc0drmf<br>
 To:   cosmos1uxmjzh94huf2qd4xgpjxgg20dryal00qcu9j94<br>
 <br>
 MsgTxH: <a href="https://www.mintscan.io/cosmos/txs/D6E030FF83488973EB3376604E1F0D5203E812BB208D0242580467CA0A5EE7B8?height=15236721" class="content-l2" target="_blank">D6E030FF83488973EB3376604E1F0D5203E812BB208D0242580467CA0A5EE7B8</a><br>
+
+</pre></div>
+
+<div class="container-poem18">
+<pre>
+*<br>
+<h3>Lucid illucid</h3>
+
+<div class="p18">
+Lucid day<br>
+Lucid way<br>
+Lucid light<br>
+Lucid fight<br>
+Lucid illucid simple to use it<br>
+<br>
+Lucid land<br>
+Lucid hand<br>
+Lucid gun<br>
+Lucid fun<br>
+Lucid illucid simple to use it<br>
+<br>
+Lucid mode<br>
+Lucid code<br>
+Lucid hack<br>
+Lucid luck<br>
+Lucid illucid simple to use it<br>
+<br>
+Lucid you<br>
+Lucid few<br>
+Lucid we<br>
+Lucid me<br>
+Lucid illucid simple to use it<br>
+<br>
+</div>
+
+From: cosmos12cct4dlepw3fmxvc0k2myqwvj4mxj8xuc0drmf<br>
+To:   cosmos1uxmjzh94huf2qd4xgpjxgg20dryal00qcu9j94<br>
+<br>
+Msg0TxH: <a href="https://www.mintscan.io/cosmos/transactions/CB78E4EBFAF30E85FCB08F33FEF84574D350CC21FFA879BB6E84FE0BC628FD98" class="content-l2" target="_blank">CB78E4EBFAF30E85FCB08F33FEF84574D350CC21FFA879BB6E84FE0BC628FD98</a><br>
+<br>
+Msg1TxH: <a href="https://www.mintscan.io/cosmos/transactions/9D92BE111169103778B3744E60EC764C4AD7D562C09F8FA6AD3F6B1B342FFBAC" class="content-l2" target="_blank">9D92BE111169103778B3744E60EC764C4AD7D562C09F8FA6AD3F6B1B342FFBAC</a><br>
+Msg2TxH: <a href="https://www.mintscan.io/cosmos/transactions/24B007D250FDEBD83407AE509201EB1F2DB411F26F2A1C7FE10D6A434F1DCF4F" class="content-l2" target="_blank">24B007D250FDEBD83407AE509201EB1F2DB411F26F2A1C7FE10D6A434F1DCF4F</a><br>
+Msg3TxH: <a href="https://www.mintscan.io/cosmos/transactions/B106920FF82239CB0D386775CCCB497732175ECA00B2532B294772258D772B44" class="content-l2" target="_blank">B106920FF82239CB0D386775CCCB497732175ECA00B2532B294772258D772B44</a><br>
+Msg4TxH: <a href="https://www.mintscan.io/cosmos/transactions/171FB160BF03624BF489348881463527D17DDCA0B1097ED3460512D4EF03487E" class="content-l2" target="_blank">171FB160BF03624BF489348881463527D17DDCA0B1097ED3460512D4EF03487E</a><br>
 
 </pre></div>
 
