--- a/pages/volume.html
+++ b/pages/volume.html
@@ -93,8 +93,8 @@ In addition, the project team is working on the first collection of poetry &lt;C
 <br>
 
 <br>
-For any questions and proposes write to cryptopoetry@skiff.com<br>
-Alek / Cyberborea<br>
+For any questions and proposes write to <b>cryptopoetry@skiff.com</b><br>
+<b>Alek</b> / Cyberborea<br>
 <br>
 
 </div></div></pre>
@@ -110,7 +110,7 @@ Alek / Cyberborea<br>
 
 <footer>
 
-<div class="container-foot">HTML+CSS+IPFS ~ Deployed by Cyberborea</div>
+<div class="container-foot">HTML+CSS+IPFS ~ Deployed by <a href="https://cyberborea.eth.limo" class="content-footer" target="_blank">Cyberborea</a></div>
 
 </footer>
 
