--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ What is innovation in poetry?<br>
 
 <footer>
 
-<div class="container-foot">HTML+CSS+IPFS ~ Deployed by Cyberborea</div>
+<div class="container-foot">HTML+CSS+IPFS ~ Deployed by <a href="https://cyberborea.eth.limo" class="content-footer" target="_blank">Cyberborea</a></div>
 
 </footer>
 
